# forestOfAudits

./: .gitignore  .pre-commit-config.yaml  MODAL_VLLM_SCALEUP_RUNBOOK.md  PLAN_vllm_modal.md  README.md  trajectory-capture-explainer.html
project/evmbench/: .gitignore  IMPLEMENTATION_ROADMAP.md  PRESENTATION_RUNBOOK.md  README.md  TTS_MODAL_STRATEGY.md  docker_build.py  forestLogs.txt  modal-forestLogs.txt  phase6variantsLogs.txt  pyproject.toml  tasklist.md
project/evmbench/docs/: EXTRACT_FOREST_TRACES_PLAN.md  MODAL_VLLM_SCALEUP_RUNBOOK.md  PHASE6_MODULAR_DEBUG_RUNS.md  PHASE6_OPENCODE_VLLM_RUNS.md  README.md  SCALEUP_EXPERIMENTS_RAW_DATA.md  audit-catalog-and-modes.md  exploit-benchmark-extension.md  exploit-benchmark-guide.md  forest-trace-extraction.md  forest-trace-extractor-plan.md  gpt54-openrouter-runbook.md  infrastructure-and-vllm.md  infrastructure-vllm-modal.md  micro-exploit-benchmark-study.md  mini-swe-agent-vllm-troubleshooting.md  nanoeval-system-and-containers.md  openai-gpt54-cli-audit-study.md  openrouter-v1-patch-exploit-runbook.md  phase6-runbook.md  phase6-runs-and-data.md  system-architecture.md  test-time-scaling-combination-architecture.md  vllm-modal-runbook.md
project/evmbench/docs/archive/: gpt54-run-snapshots-2026-05.md
project/evmbench/evmbench/: Dockerfile
project/evmbench/evmbench/agents/: agent.py  modal_runner.py
project/evmbench/evmbench/agents/mini-swe-agent/: config.yaml  deploy_vllm.py  deploy_vllm_server.py  entrypoint.py  evaluate_phase6.py  judge.py  scout.py  (+15 more)
project/evmbench/evmbench/experiments/: DATASET_SCHEMA_GUIDE.md  PHASE6_MODULAR_DEBUG_RUNS.md  PRM_EXPERIMENTS_v1.md  SCALEUP_EXPERIMENTS_RAW_DATA.md  SCHEMA.md  dataset_manifest.py  extract_forest_traces.py  schema_version.py  trace_schema.py
project/evmbench/evmbench/nano/: solver.py
project/evmbench/research-artifacts/: index.html
project/evmbench/research-artifacts/bash-call-analysis/: agent_run_intent_matrix.csv  agent_run_summary.csv  bash_calls.csv  by_audit.csv  by_experiment.csv  by_harness.csv  by_intent.csv  by_mode.csv  by_primary_command.csv  by_source_type.csv  by_tool_family.csv  exit_by_intent.csv  intent_by_harness.csv  intent_by_mode.csv  intent_by_run.csv  primary_command_by_run.csv  report.md  run_intent_matrix.csv  run_summary.csv  tool_family_by_experiment.csv
project/evmbench/scripts/: analyze_run_bash_calls.py  check_modal_forest_modes.py
project/evmbench/tests/: test_mini_swe_agent_forest.py  test_mini_swe_agent_phase5.py  test_mini_swe_agent_phase6.py  test_modal_forest_preflight.py  test_openrouter_v1_runner.py  test_trace_schema.py  test_vllm_deploy_safety.py
(+14 files in other folders)
